force-app/main/default/objects/ConfiguracaoTempo__c/ConfiguracaoTempo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configurações de Tempo</label>
</CustomObject>