force-app/main/default/objects/ConfiguracaoTempo__c/fields/AntecedenciaSismica__c.field-meta.xml
<CustomField>
    <fullName>AntecedenciaSismica__c</fullName>
    <description>Voos de sísmica com a antecedência acima dessa informação bloqueiam todo o dia após o voo</description>
    <inlineHelpText>Voos de sísmica com a antecedência acima dessa informação bloqueiam todo o dia após o voo</inlineHelpText>
    <label>Antecedência Sísmica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>