force-app/main/default/objects/ConfiguracaoTempo__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Esse tempo é o Tempo em minutos antes do Voo para fazer o CheckIn</description>
    <inlineHelpText>Esse tempo é o Tempo em minutos antes do Voo para fazer o CheckIn</inlineHelpText>
    <label>CheckIn</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>