force-app/main/default/objects/ConfiguracaoTempo__c/fields/DiasAntesAlertaComercialTrocaTurma__c.field-meta.xml
<CustomField>
    <fullName>DiasAntesAlertaComercialTrocaTurma__c</fullName>
    <description>Quando dias antes devo informar o comercial que tem um voo de troca de turma para ajustar</description>
    <label>DiasAntesAlertaComercialTrocaTurma</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>