force-app/main/default/objects/ConfiguracaoTempo__c/fields/DiasAtualizarInvervaloSol__c.field-meta.xml
<CustomField>
    <fullName>DiasAtualizarInvervaloSol__c</fullName>
    <label>Dias para Atualizar Invervalo Sol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>