force-app/main/default/objects/ConfiguracaoTempo__c/fields/DiasParaExpirarPesquisaPassageiro__c.field-meta.xml
<CustomField>
    <fullName>DiasParaExpirarPesquisaPassageiro__c</fullName>
    <label>DiasParaExpirarPesquisaPassageiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>