force-app/main/default/objects/ConfiguracaoTempo__c/fields/DiasPrimeiroLembreteTarefa__c.field-meta.xml
<CustomField>
    <fullName>DiasPrimeiroLembreteTarefa__c</fullName>
    <label>Dias para Primeiro Lembrete de Tarefa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>