force-app/main/default/objects/ConfiguracaoTempo__c/fields/DiasSegundoLembreteTarefa__c.field-meta.xml
<CustomField>
    <fullName>DiasSegundoLembreteTarefa__c</fullName>
    <label>Dias para Segundo Lembrete de Tarefa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>