force-app/main/default/objects/ConfiguracaoTempo__c/fields/EntreVoosFullCabinPre__c.field-meta.xml
<CustomField>
    <fullName>EntreVoosFullCabinPre__c</fullName>
    <inlineHelpText>Número inteiro que representa o tempo em minutos mínimo para que a aeronave esteja pronta para efetuar um voo</inlineHelpText>
    <label>Entre Voos - FullCabin (Pré)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>