force-app/main/default/objects/ConfiguracaoTempo__c/fields/EntreVoosRetroativo__c.field-meta.xml
<CustomField>
    <fullName>EntreVoosRetroativo__c</fullName>
    <label>Entre voos - Retroativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>