force-app/main/default/objects/ConfiguracaoTempo__c/fields/HoraFimAprovacaoNoturna__c.field-meta.xml
<CustomField>
    <fullName>HoraFimAprovacaoNoturna__c</fullName>
    <label>Hora Fim Aprovação Noturna</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>