force-app/main/default/objects/ConfiguracaoTempo__c/fields/HoraFimSelecaoHorarioVoo__c.field-meta.xml
<CustomField>
    <fullName>HoraFimSelecaoHorarioVoo__c</fullName>
    <description>Campo utilizado para pegar apenas hora de fim válida para agendamento de voo na tela customizada</description>
    <inlineHelpText>Campo utilizado para pegar apenas hora de fim válida para agendamento de voo na tela customizada</inlineHelpText>
    <label>Hora Fim Seleção Horário Voo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>