force-app/main/default/objects/ConfiguracaoTempo__c/fields/HoraInicioAprovacaoNoturna__c.field-meta.xml
<CustomField>
    <fullName>HoraInicioAprovacaoNoturna__c</fullName>
    <label>Hora Início Aprovação Noturna</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>