force-app/main/default/objects/ConfiguracaoTempo__c/fields/HoraNotificacaoVencimentoTarefa__c.field-meta.xml
<CustomField>
    <fullName>HoraNotificacaoVencimentoTarefa__c</fullName>
    <description>A hora que vai ser salva para lembrete da tarefa</description>
    <inlineHelpText>A hora que vai ser salva para lembrete da tarefa</inlineHelpText>
    <label>Hora notificação vencimento de tarefa</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>