force-app/main/default/objects/ConfiguracaoTempo__c/fields/IntervaloEmDiasBuscaEventos__c.field-meta.xml
<CustomField>
    <fullName>IntervaloEmDiasBuscaEventos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Intervalo em dias para buscar eventos relacionados a uma data.
Ex:. Se um voo vai ser inserido, e o intervalo é 15, irá buscar 15 dias antes e 15 dias depois de eventos para analisar referente ao voo</description>
    <inlineHelpText>Intervalo em dias para buscar eventos relacionados a uma data.</inlineHelpText>
    <label>Intervalo em Dias de Busca de Eventos</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>