force-app/main/default/objects/ConfiguracaoTempo__c/fields/IntervaloMinutosSelecaoAeronaves__c.field-meta.xml
<CustomField>
    <fullName>IntervaloMinutosSelecaoAeronaves__c</fullName>
    <description>Intervalo em minutos para a listagem de horários a serem selecionados na tela de solicitação de voo</description>
    <inlineHelpText>Intervalo em minutos para a listagem de horários a serem selecionados na tela de solicitação de voo</inlineHelpText>
    <label>IntervaloMinutosSelecaoAeronaves</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>