force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutoInicioSelecaoHorarioVoo__c.field-meta.xml
<CustomField>
    <fullName>MinutoInicioSelecaoHorarioVoo__c</fullName>
    <description>Campo utilizado para pegar apenas minuto de inicio válido para agendamento de voo na tela customizada</description>
    <inlineHelpText>Campo utilizado para pegar apenas minuto de inicio válido para agendamento de voo na tela customizada</inlineHelpText>
    <label>Minuto Início Seleção Horário Voo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>