force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosAposEnvioIntegracaoSAPIENS__c.field-meta.xml
<CustomField>
    <fullName>MinutosAposEnvioIntegracaoSAPIENS__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Minutos Após Envio Integração SAPIENS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>