force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosBloqueioReservarVoo__c.field-meta.xml
<CustomField>
    <fullName>MinutosBloqueioReservarVoo__c</fullName>
    <description>Minutos de bloqueio na pré-reserva para reservar o voo na última etapa (carrinho de voos)</description>
    <inlineHelpText>Minutos de bloqueio na pré-reserva para reservar o voo na última etapa (carrinho de voos)</inlineHelpText>
    <label>Minutos de bloqueio para reservar o voo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>