force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosBloqueioSelecaoVoo__c.field-meta.xml
<CustomField>
    <fullName>MinutosBloqueioSelecaoVoo__c</fullName>
    <description>Minutos que o voo estará pré-reservado quando o usuário selecioná-lo</description>
    <inlineHelpText>Minutos que o voo estará pré-reservado quando o usuário selecioná-lo</inlineHelpText>
    <label>Minutos de bloqueio seleção do voo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>