force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosExecucaoVincularSigOmni__c.field-meta.xml
<CustomField>
    <fullName>MinutosExecucaoVincularSigOmni__c</fullName>
    <description>Minutos para executar a classe agendada de vínculo entre os Voos do Voe Omni e Integrados do SIG Trip.</description>
    <inlineHelpText>Minutos para executar a classe agendada de vínculo entre os Voos do Voe Omni e Integrados do SIG Trip.</inlineHelpText>
    <label>Minutos Execução Vincular Sig Omni</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>