force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosNotificacaoProtocoloAAErro__c.field-meta.xml
<CustomField>
    <fullName>MinutosNotificacaoProtocoloAAErro__c</fullName>
    <label>Minutos Notificação Protocolo A/A Erro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>