force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosNotificarNFEmBranco__c.field-meta.xml
<CustomField>
    <fullName>MinutosNotificarNFEmBranco__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Minutos para Notificar NF Em Branco</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>