force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosNotificarProtocoloAberto__c.field-meta.xml
<CustomField>
    <fullName>MinutosNotificarProtocoloAberto__c</fullName>
    <defaultValue>2880</defaultValue>
    <label>Minutos para Notificar Protocolo Aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>