force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosNotificarProtocoloAnalise__c.field-meta.xml
<CustomField>
    <fullName>MinutosNotificarProtocoloAnalise__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Minutos para Notificar Protocolo Análise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>