force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosNotificarProtocoloNulo__c.field-meta.xml
<CustomField>
    <fullName>MinutosNotificarProtocoloNulo__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Minutos para Notificar Protocolo Nulo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>