force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosParaEnviarAlerta__c.field-meta.xml
<CustomField>
    <fullName>MinutosParaEnviarAlerta__c</fullName>
    <inlineHelpText>Tempo que o cliente tem para concluir a reserva antes do alerta de abandono para a equipe comercial.</inlineHelpText>
    <label>Minutos Para Concluir Reserva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>