force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosToleranciaAtrasoVoo__c.field-meta.xml
<CustomField>
    <fullName>MinutosToleranciaAtrasoVoo__c</fullName>
    <label>Minutos de Tolerância Atraso Voo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>