force-app/main/default/objects/ConfiguracaoTempo__c/fields/MinutosVoeOMNISigTrip__c.field-meta.xml
<CustomField>
    <fullName>MinutosVoeOMNISigTrip__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Quantidade de minutos de tolerância entre o voo cadastrado no Voe Omni e o Voo cadastrado no SIG Trip.</description>
    <inlineHelpText>Quantidade de minutos de tolerância entre o voo cadastrado no Voe Omni e o Voo cadastrado no SIG Trip.</inlineHelpText>
    <label>Minutos Aceitáveis VoeOMNI X SigTrip</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>