force-app/main/default/objects/ConfiguracaoTempo__c/fields/NotificacaoInicioVooComTranslado__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoInicioVooComTranslado__c</fullName>
    <description>Minutos antes do início do voo para enviar uma notificação de alerta do voo se aproximando onde o voo possui traslado</description>
    <inlineHelpText>Minutos antes do início do voo para enviar uma notificação de alerta do voo se aproximando onde o voo possui traslado</inlineHelpText>
    <label>Notificação início voo com translado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>