force-app/main/default/objects/ConfiguracaoTempo__c/fields/NotificacaoInicioVooSemTranslado__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoInicioVooSemTranslado__c</fullName>
    <description>Minutos antes do início do voo para enviar uma notificação de alerta do voo se aproximando</description>
    <inlineHelpText>Minutos antes do início do voo para enviar uma notificação de alerta do voo se aproximando</inlineHelpText>
    <label>Notificação início voo sem translado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>