force-app/main/default/objects/ConfiguracaoTempo__c/fields/QtdDiasEnvioNovaPesquisaSatisfacao__c.field-meta.xml
<CustomField>
    <fullName>QtdDiasEnvioNovaPesquisaSatisfacao__c</fullName>
    <description>Quantos dias devo esperar até que deva enviar uma nova pesquisa de satisfação ao contratante</description>
    <inlineHelpText>Quantos dias devo esperar até que deva enviar uma nova pesquisa de satisfação ao contratante</inlineHelpText>
    <label>Qtd Dias Envio Nova Pesquisa Satisfação</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>