force-app/main/default/objects/ConfiguracaoTempo__c/fields/QtdDiasEnvioPesquisaSatisfacaoContrato__c.field-meta.xml
<CustomField>
    <fullName>QtdDiasEnvioPesquisaSatisfacaoContrato__c</fullName>
    <label>Qtd Dias Envio Pesquisa Contratante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>