force-app/main/default/objects/ConfiguracaoTempo__c/fields/QuantidadeDiasIntervaloSol__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDiasIntervaloSol__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de dias para registrar os intervalos do  Sol.
♦ Hora do Por do Sol
♦ Hora do Nascer do Sol
♦ Data do Dia</description>
    <inlineHelpText>Quantidade de dias para registrar os intervalos do  Sol. 
♦ Hora do Por do Sol
♦ Hora do Nascer do Sol
♦ Data do Dia</inlineHelpText>
    <label>Quantidade de Dias de Intervalo do Sol</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>