force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoAntesVooAlertaCarga__c.field-meta.xml
<CustomField>
    <fullName>TempoAntesVooAlertaCarga__c</fullName>
    <label>Tempo Antes do Voo Alerta Carga</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>