force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoEsperaAprovacaoClienteMin__c.field-meta.xml
<CustomField>
    <fullName>TempoEsperaAprovacaoClienteMin__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Tempo de Espera Aprovação Cliente (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>