force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoIntegracaoSkytrac__c.field-meta.xml
<CustomField>
    <fullName>TempoIntegracaoSkytrac__c</fullName>
    <description>Tempo (em minutos) para definir quantos minutos antes do voo começar e depois do voo começar, o sistema deve rastrear o voo.</description>
    <inlineHelpText>Tempo (em minutos) para definir quantos minutos antes do voo começar e depois do voo começar, o sistema deve rastrear o voo.</inlineHelpText>
    <label>Tempo Integração Skytrac</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>