force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoMaximoAtrasoTrecho__c.field-meta.xml
<CustomField>
    <fullName>TempoMaximoAtrasoTrecho__c</fullName>
    <description>Tempo em minutos de tolerância de atraso do trecho. Se atingir o valor será enviada uma notificação de atraso.</description>
    <inlineHelpText>Tempo em minutos de tolerância de atraso do trecho. Se atingir o valor será enviada uma notificação de atraso.</inlineHelpText>
    <label>Tempo máximo de atraso do trecho</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>