force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoMaximoCorte__c.field-meta.xml
<CustomField>
    <fullName>TempoMaximoCorte__c</fullName>
    <description>Tempo máximo de corte a ser solicitado pelo cliente.
Valor Máximo: 1.439</description>
    <inlineHelpText>Tempo máximo de corte a ser solicitado pelo cliente.
Valor Máximo: 1.439</inlineHelpText>
    <label>Tempo máximo de corte</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>