force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoMinutos__c</fullName>
    <inlineHelpText>Número inteiro que representa o tempo mínimo de minutos entre a reserva e a execução de um voo</inlineHelpText>
    <label>Antecedência da Reserva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>