force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoParaEnvioAprovClienteComercial__c.field-meta.xml
<CustomField>
    <fullName>TempoParaEnvioAprovClienteComercial__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Tempo para Envio Aprov Cliente-Comercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>