force-app/main/default/objects/ConfiguracaoTempo__c/fields/TempoPlanejamentoPos__c.field-meta.xml
<CustomField>
    <fullName>TempoPlanejamentoPos__c</fullName>
    <inlineHelpText>Número inteiro que representa em minutos o tempo mínimo para que aquela aeronave esteja pronta para efetuar um novo voo</inlineHelpText>
    <label>Entre Voos - ShuttleSeat (Pós)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>